Bug 121623 - FILEOPEN RTF The 2 column setting is lost when the first column contains only a table
Summary: FILEOPEN RTF The 2 column setting is lost when the first column contains only...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.3.0 target:6.2.0.2
Keywords: bibisectRequest, filter:rtf, regression
Depends on:
Blocks: Page-Layout-Columns
  Show dependency treegraph
 
Reported: 2018-11-22 15:07 UTC by Gabor Kelemen (Collabora)
Modified: 2019-01-07 10:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
The original RTF file (37.33 KB, application/msword)
2018-11-22 15:07 UTC, Gabor Kelemen (Collabora)
Details
A screenshot showcasing the issue (140.97 KB, image/png)
2018-11-22 15:07 UTC, Gabor Kelemen (Collabora)
Details
The same RTF file with just one paragraph of text added to the first page (37.45 KB, application/msword)
2018-11-22 15:12 UTC, Gabor Kelemen (Collabora)
Details
The original RTF file saved as DOCX (18.19 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-11-22 15:12 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-11-22 15:07:08 UTC
Created attachment 146912 [details]
The original RTF file

If an RTF document has 2 columns, but the first column contains only a table, this setting is lost and displayed as a 1 column document in LibreOffice Writer. Adding just one line of text to the first page fixes the issue. Saving the original (table only in the first column) RTF as DOCX in LibreOffice Writer also fixes the issue.

Steps to reproduce:
1. Create a new document in LibreOffice Writer
2. Click on Format > Page, click on the Columns tab and select two columns
3. Insert a table in the first column
4. Insert a column break after the table by clicking on Insert > More breaks > Manual break and selecting the Column break option
5. Add some random text to the second column
6. Save the document as RTF

LibreOffice details:
Version: 6.2.0.0.alpha1+
Build ID: 2cef68a605494bcef0388201b1058c95788c45a8
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2018-11-22 15:07:45 UTC
Created attachment 146913 [details]
A screenshot showcasing the issue
Comment 2 Gabor Kelemen (Collabora) 2018-11-22 15:12:32 UTC
Created attachment 146914 [details]
The same RTF file with just one paragraph of text added to the first page
Comment 3 Gabor Kelemen (Collabora) 2018-11-22 15:12:57 UTC
Created attachment 146915 [details]
The original RTF file saved as DOCX
Comment 4 Dieter 2018-11-22 18:50:21 UTC
I confirm it with the steps from comment 0 and

Version: 6.2.0.0.beta1 (x64)
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (de_DE); UI-Language: en-GB
Calc: threaded

Additional observation: If you delete first paragraph from document of comment 2, save and reload it, the secon dolumn is also there
Comment 5 Xisco Faulí 2018-11-27 20:34:38 UTC
Reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.10; Render: default; 

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

but not in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 6 Commit Notification 2018-12-30 15:11:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/92863700cddb70b07e4722551b1f1db78c2474d3%5E%21

tdf#121623 RTF import: keep table in multicolumn section

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-01-02 11:08:07 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/c395e72aa330632428b194da96743aad20821676%5E%21

tdf#121623 RTF import: keep table in multicolumn section

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2019-01-07 10:10:52 UTC
Issue verified in

Version: 6.3.0.0.alpha0+
Build ID: 892a5cfe557edb405ec0037676f02a1c24dd76ec
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, Thanks for fixing this!!