tdf#121623 RTF import: keep table in multicolumn section

instead of losing columns when the section starts with that table.

Change-Id: I1c9d4eb03d24e54600956cb41b835c5e37bfdd8b