writerfilter/source/rtftok/rtfdocumentimpl.hxx
@@ -572,6 +572,8 @@ private:
     /// Color index <-> RGB color value map
     std::vector<Color> m_aColorTable;
     bool m_bFirstRun;
+    // only for assertion
+    bool m_bFirstRunException;
     /// If paragraph properties should be emitted on next run.
     bool m_bNeedPap;
     /// If we need to emit a CR at the end of substream.
